force-app/main/default/objects/HelpResource__c/HelpResource__c.object-meta.xml
<CustomObject>
    <description>An external Help Resource accessible from one or more Help Topics (via Help Topic Resources)</description>
    <label>Help Resource</label>
    <nameField>
        <label>Help Resource Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Help Resources</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>