force-app/main/default/objects/HelpResource__c/fields/Location__c.field-meta.xml
<CustomField>
    <fullName>Location__c</fullName>
    <defaultValue>&quot;Unknown&quot;</defaultValue>
    <description>The name of the repository or facility that houses this Help Resource</description>
    <inlineHelpText>The name of the repository or facility that houses this Help Resource</inlineHelpText>
    <label>Location</label>
    <length>50</length>
    <type>Text</type>
</CustomField>