force-app/main/default/objects/HelpResource__c/fields/PreviewURL__c.field-meta.xml
<CustomField>
    <fullName>PreviewURL__c</fullName>
    <description>Auto-generated value representing the URL of a suitable preview image for this Help Resource</description>
    <formula>IF( ISPICKVAL( ResourceType__c , &quot;Document&quot;) , 
    &quot;/resource/iahelp__IHResources/img/IconResourceDocument.png&quot;,
IF( ISPICKVAL( ResourceType__c , &quot;Web-Page&quot;),
     &quot;/resource/iahelp__IHResources/img/IconResourceWebPage.png&quot;,
IF( ISPICKVAL( ResourceType__c , &quot;Video&quot;),
    &quot;/resource/iahelp__IHResources/img/IconResourceVideo.png&quot;,
ResourceURL__c) ))</formula>
    <inlineHelpText>Auto-generated value representing the URL of a suitable preview image for this Help Resource</inlineHelpText>
    <label>Preview URL</label>
    <type>Text</type>
</CustomField>