force-app/main/default/objects/HelpResource__c/fields/RelatedHelpTopics__c.field-meta.xml
<CustomField>
    <fullName>RelatedHelpTopics__c</fullName>
    <inlineHelpText>Rolled-up Summary field showing the number of Help Topics referencing this Help Resource</inlineHelpText>
    <label>Related Help Topics</label>
    <summaryForeignKey>HelpTopicResource__c.HelpResource__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>