force-app/main/default/objects/HelpResource__c/fields/ResourceType__c.field-meta.xml
<CustomField>
    <fullName>ResourceType__c</fullName>
    <inlineHelpText>Defines the Type of Help Resource and the Preview that Helped Users will see in Related Help Resources listings</inlineHelpText>
    <label>Resource Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Document</fullName>
            </value>
            <value>
                <fullName>Image</fullName>
            </value>
            <value>
                <fullName>Video</fullName>
            </value>
            <value>
                <fullName>Web-page</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>