force-app/main/default/objects/HelpResource__c/fields/ResourceURL__c.field-meta.xml
<CustomField>
    <fullName>ResourceURL__c</fullName>
    <description>Link (URL) to this Help Resource</description>
    <inlineHelpText>Link (URL) to this Help Resource</inlineHelpText>
    <label>Resource URL</label>
    <required>true</required>
    <type>Url</type>
</CustomField>