force-app/main/default/objects/HelpResource__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>ResourceType__c</columns>
    <columns>ResourceURL__c</columns>
    <columns>Preview__c</columns>
    <columns>Location__c</columns>
    <columns>Summary__c</columns>
    <columns>RelatedHelpTopics__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <columns>UPDATEDBY_USER</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <label>1. All Help Resources</label>
</ListView>