force-app/main/default/objects/HelpResource__c/listViews/Number_of_Related_Help_Topics.listView-meta.xml
<ListView>
    <fullName>Number_of_Related_Help_Topics</fullName>
    <columns>RelatedHelpTopics__c</columns>
    <columns>NAME</columns>
    <columns>ResourceURL__c</columns>
    <columns>ResourceType__c</columns>
    <columns>Summary__c</columns>
    <columns>Location__c</columns>
    <columns>UPDATEDBY_USER</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <label>Number of Related Help Topics</label>
</ListView>